--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn-icons-png.flaticon.com%2F512%2F152%2F152843.png&imgrefurl=https%3A%2F%2Fwww.flaticon.es%2Ficono-gratis%2Fhtml5_152843&tbnid=a_QfEoqC8lgNPM&vet=12ahUKEwj12qTgwKv3AhUCazABHfhzBSEQMygDegUIARDHAQ..i&docid=qXrMQYk2-uoX5M&w=512&h=512&q=icono%20html5&ved=2ahUKEwj12qTgwKv3AhUCazABHfhzBSEQMygDegUIARDHAQ">                                                       
   </head>
   <body>
     <div class="container d-flex align-items-center h-100">
